# gesis-tests

./: .gitignore  1-introduction.qmd  2-obtaining-data.qmd  3-text-analysis.qmd  4-text-analysis.qmd  5-network-analysis.qmd  README.md  pyproject.toml  setup.sh
.devcontainer/: Dockerfile  devcontainer.json
