[tool.poetry]
name = "gesis-tests"
version = "0.1.0"
package-mode = false
description = "GESIS test scripts and notebooks"
authors = ["John McLevey <john.mclevey@uwaterloo.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
