[tool.poetry]
name = "gesis-tests"
version = "0.1.0"
description = "GESIS test scripts and notebooks"
authors = ["John McLevey <john.mclevey@uwaterloo.ca>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
