[tool.poetry]
name = "gesis-tests"
version = "0.1.0"
description = "GESIS test scripts and notebooks"
authors = ["John McLevey <john.mclevey@uwaterloo.ca>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12.4,<3.14"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
seaborn = "^0.13.2"
spacy = "^3.8.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
